@@ -1,6 +1,7 @@
 package com.dmdirc.ktirc.model
 
 import com.dmdirc.ktirc.io.CaseMapping
+import java.time.LocalDateTime
 
 /**
  * Describes the state of a channel that the client has joined.
@@ -20,6 +21,17 @@ class ChannelState(val name: String, caseMappingProvider: () -> CaseMapping) {
         internal set
 
     /**
+     * Whether or not we have discovered or seen a channel topic. Subsequent discoveries are ignored.
+     */
+    internal var topicDiscovered = false
+
+    /**
+     * The current channel topic.
+     */
+    var topic = ChannelTopic()
+        internal set
+
+    /**
      * A map of all users in the channel to their current modes.
      */
     val users = ChannelUserMap(caseMappingProvider)
@@ -34,10 +46,25 @@ class ChannelState(val name: String, caseMappingProvider: () -> CaseMapping) {
     internal fun reset() {
         receivingUserList = false
         modesDiscovered = false
+        topic = ChannelTopic()
+        topicDiscovered = false
         users.clear()
         modes.clear()
     }
 }
+
+/**
+ * Describes a channel topic, and when and by whom it was set.
+ *
+ * [topic] may be null if there is no topic set.
+ *
+ * [user] and [time] may not be known if the topic was set before we joined the channel, depending on when it
+ * is checked and the exact behaviour of the IRC server.
+ *
+ * If the topic is cleared while we are present, then [topic] will be `null` but the [user] and [time] that it
+ * was cleared will still be recorded.
+ */
+data class ChannelTopic(val topic: String? = null, val user: User? = null, val time: LocalDateTime? = null)
 
 /**
  * Describes a user in a channel, and their modes.
