@@ -4,4 +4,5 @@ import java.time.LocalDateTime
 
 object TestConstants {
     val time: LocalDateTime = LocalDateTime.parse("1995-09-15T09:00:00")
+    val otherTime : LocalDateTime = LocalDateTime.parse("1996-05-03T13:00:00")
 }
